# Langulus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LangulusUtilities.cmake  todo.md
.github/workflows/: ci.yml
framework/: CMakeLists.txt  Langulus.cpp
framework/test/: Main.cpp  Main.hpp  TestModule.cpp
framework/testmodule/: Main.cpp  Main.hpp
